welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:4: error: not enough arguments for method parcoursDouble: (x: Int, y: Int, d: Boolean)Unit.
Unspecified value parameter d.
    parcoursDouble(getX(),getY())
                  ^ZigZag:36: error: reassignment to val
   	d=false
         ^ZigZag:43: error: reassignment to val
   	d= true
         ^